fix scrolling bug on ios

--- a/resources/sass/layouts/_switch-layout.scss
+++ b/resources/sass/layouts/_switch-layout.scss
@@ -17,7 +17,7 @@ html, body {
     position: absolute;
     top: 0;
     left: 0;
-    visibility: hidden;
+//    visibility: hidden;
     overflow-y: scroll;
     overflow-x: hidden;
     -webkit-backface-visibility: hidden;
